add view request edit + view history for violationListOfClass page

--- a/project/src/main/resources/templates/manageEmulation/violationListOfClass.html
+++ b/project/src/main/resources/templates/manageEmulation/violationListOfClass.html
@@ -81,26 +81,7 @@
                 <h4 class="modal-title">Lịch sử chỉnh sửa</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
             </div>
-            <div class="modal-body">
-                <ul>
-                    <li><span class="font-500">21/07/2020 - user1.</span>
-                        <ol>Lý do: dfghdfgh.</ol>
-                        <ol>Số lần vi phạm trước thay đổi: 4.</ol>
-                    </li>
-                </ul>
-                <ul>
-                    <li><span class="font-500">21/07/2020 - user1.</span>
-                        <ol>Lý do: dfghdfgh.</ol>
-                        <ol>Số lần vi phạm trước thay đổi: 4.</ol>
-                    </li>
-                </ul>
-                <ul>
-                    <li><span class="font-500">21/07/2020 - user1.</span>
-                        <ol>Lý do: dfghdfgh.</ol>
-                        <ol>Số lần vi phạm trước thay đổi: 4.</ol>
-                    </li>
-                </ul>
-            </div>
+            <div class="modal-body"></div>
             <div class="modal-footer">
                 <input type="button" class="btn btn-primary" data-dismiss="modal" value="ĐÓNG">
             </div>
