commit code violationListOfClass page

--- a/project/src/main/resources/templates/manageEmulation/assignEmulation.html
+++ b/project/src/main/resources/templates/manageEmulation/assignEmulation.html
@@ -66,6 +66,7 @@
                 <a href="#addAssign" class="btn btn-success manageBtn" data-toggle="modal">
                     <span>Tạo phân công</span>
                 </a>
+                <button class="btn btn-success mr-0" id="download">Tải xuống</button>
                 <button class="btn btn-search mr-0" id="search">Tìm kiếm</button>
             </div>
         </div>
