--- a/project/src/main/resources/templates/manageEmulation/assignEmulation.html
+++ b/project/src/main/resources/templates/manageEmulation/assignEmulation.html
@@ -147,6 +147,18 @@
     </div>
 </div>
 
+<!--    Modal Save Success-->
+<div class="modal fade" tabindex="-1" role="dialog" id="downloadModal">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-body text-center"></div>
+            <div class="modal-footer">
+                <input type="button" class="btn btn-primary" data-dismiss="modal" value="ĐÓNG"/>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="modal-loading"></div>
 <div th:replace="fragments/footer :: footer"></div>
 <script type="text/javascript" th:src="@{/js/manageEmulation/assignEmulation.js}"></script>
