--- a/project/src/main/resources/templates/manageEmulation/gradingToEmulation.html
+++ b/project/src/main/resources/templates/manageEmulation/gradingToEmulation.html
@@ -39,16 +39,15 @@
                 <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 px-0">
                     <div class="form-group mb-1">
                         <label>Ngày:</label>
-                        <input type="date" class="form-control w-75"  id="datetime">
+                        <input type="date" class="form-control w-75" id="datetime">
                     </div>
                 </div>
             </div>
         </div>
         <div class="panel panel-default"></div>
-
-        <div class="saveResult text-right">
-            <div class="text-red font-500 gradingToEmulation-err mt-4 d-inline-block"></div>
+        <div class="saveResult text-left">
             <input type="button" class="btn btn-customer my-3" data-toggle="modal" id="saveGrading" value="LƯU"/>
+            <div class="text-red font-500 gradingToEmulation-err mt-4 d-inline-block"></div>
         </div>
     </div>
 </div>
