--- a/project/src/main/resources/templates/manageEmulation/viewRequest.html
+++ b/project/src/main/resources/templates/manageEmulation/viewRequest.html
@@ -33,8 +33,8 @@
                     <div class="form-group text-left mb-1">
                         <label>Trạng thái:</label>
                         <select class="combobox form-control w-75" id="status">
-                            <option value="3" selected>Tất cả</option>
-                            <option value="0">Chưa duyệt</option>
+                            <option value="3">Tất cả</option>
+                            <option value="0" selected>Chưa duyệt</option>
                             <option value="1">Chấp nhận</option>
                             <option value="2">Từ chối</option>
                         </select>
