--- a/project/src/main/resources/templates/manageSchoolRank/rankByWeek.html
+++ b/project/src/main/resources/templates/manageSchoolRank/rankByWeek.html
@@ -53,12 +53,15 @@
             <div class="table-title-2 pb-0">
                 <div class="col-sm-12 px-0 d-flex justify-content-end align-items-center">
                     <input type="button" class="btn btn-success mx-2 manageBtn" id="editGrades" value="Sửa điểm"/>
-                    <input type="button" id="editRankBtn" class="btn btn-success mx-2 manageBtn" value="Sửa xếp hạng tuần"/>
-                    <input type="button" id="createRank" class="btn btn-success mx-2 manageBtn" value="Tạo xếp hạng tuần"/>
+                    <input type="button" id="editRankBtn" class="btn btn-success mx-2 manageBtn"
+                           value="Sửa xếp hạng tuần"/>
+                    <input type="button" id="createRank" class="btn btn-success mx-2 manageBtn"
+                           value="Tạo xếp hạng tuần"/>
                     <input type="button" id="download" class="btn btn-success ml-2" value="Tải xuống"/>
                 </div>
             </div>
-            <table class="table table-bordered table-edit mt-3 display responsive nowrap" style="width:100%">
+            <!--            <table class="table table-bordered table-edit mt-3 display responsive nowrap" style="width:100%">-->
+            <table class="table table-bordered table-edit mt-3 w-100">
                 <thead class="thead-light">
                 <tr class="align-items-center">
                     <th>Lớp</th>
