--- a/project/src/main/resources/templates/manageSchoolRank/rankByWeek.html
+++ b/project/src/main/resources/templates/manageSchoolRank/rankByWeek.html
@@ -50,33 +50,37 @@
                     <button class="btn btn-search mr-0" id="search">Tìm kiếm</button>
                 </div>
             </div>
-            <div class="table-title-2 pb-0">
-                <div class="col-sm-12 px-0 d-flex justify-content-end align-items-center">
-                    <input type="button" class="btn btn-success mx-2 manageBtn" id="editGrades" value="Sửa điểm"/>
-                    <input type="button" id="editRankBtn" class="btn btn-success mx-2 manageBtn"
-                           value="Sửa xếp hạng tuần"/>
-                    <input type="button" id="createRank" class="btn btn-success mx-2 manageBtn"
-                           value="Tạo xếp hạng tuần"/>
-                    <input type="button" id="download" class="btn btn-success ml-2" value="Tải xuống"/>
-                </div>
-            </div>
-            <!--            <table class="table table-bordered table-edit mt-3 display responsive nowrap" style="width:100%">-->
-            <table class="table table-bordered table-edit mt-3 w-100">
-                <thead class="thead-light">
-                <tr class="align-items-center">
-                    <th>Lớp</th>
-                    <th>Điểm nề nếp</th>
-                    <th>Điểm học tập</th>
-                    <th>Điểm phong trào</th>
-                    <th>Điểm lao động</th>
-                    <th>Tổng điểm</th>
-                    <th>Xếp hạng</th>
-                </tr>
-                </thead>
-                <tbody></tbody>
-            </table>
         </div>
+        <div class="table-title-2 rankWeekBtn p-0 search row">
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 px-0">
+                <input type="button" class="btn btn-success mr-2 manageBtn" id="editGrades" value="Sửa điểm"/>
+                <input type="button" class="btn btn-success mx-2 manageBtn hide" id="closeEditGrades" value="Hủy"/>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 px-0 text-right">
+                <input type="button" id="editRankBtn" class="btn btn-success mx-2 manageBtn"
+                       value="Sửa xếp hạng tuần"/>
+                <input type="button" id="createRank" class="btn btn-success mx-2 manageBtn"
+                       value="Tạo xếp hạng tuần"/>
+                <input type="button" id="download" class="btn btn-success ml-2" value="Tải xuống"/>
+            </div>
+        </div>
+        <!--            <table class="table table-bordered table-edit mt-3 display responsive nowrap" style="width:100%">-->
+        <table class="table table-bordered table-edit mt-3 w-100">
+            <thead class="thead-light">
+            <tr class="align-items-center">
+                <th>Lớp</th>
+                <th>Điểm nề nếp</th>
+                <th>Điểm học tập</th>
+                <th>Điểm phong trào</th>
+                <th>Điểm lao động</th>
+                <th>Tổng điểm</th>
+                <th>Xếp hạng</th>
+            </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
     </div>
+</div>
 </div>
 </div>
 
