--- a/project/src/main/resources/templates/manageSchoolRank/rankByWeek.html
+++ b/project/src/main/resources/templates/manageSchoolRank/rankByWeek.html
@@ -36,6 +36,12 @@
             <div class="search row align-items-end">
                 <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 px-0">
                     <div class="form-group text-left mb-1">
+                        <label>Năm học:</label>
+                        <select class="combobox form-control w-75" id="byYear"></select>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 px-0">
+                    <div class="form-group text-left mb-1">
                         <label>Tuần:</label>
                         <select class="combobox form-control w-75" id="byWeek"></select>
                     </div>
@@ -46,10 +52,10 @@
                         <select class="combobox form-control w-75" id="byClass"></select>
                     </div>
                 </div>
-                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 px-0 text-right">
-                    <button class="btn btn-search mr-0" id="search">Tìm kiếm</button>
-                </div>
             </div>
+        </div>
+        <div class="table-title-2 pb-0">
+            <button class="btn btn-search mr-0" id="search">Tìm kiếm</button>
         </div>
         <div class="table-title-2 rankWeekBtn p-0 search row">
             <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 px-0">
