add API for rankBySemester page

--- a/project/src/main/resources/templates/manageSchoolRank/rankByMonth.html
+++ b/project/src/main/resources/templates/manageSchoolRank/rankByMonth.html
@@ -109,18 +109,18 @@
                     <span>Tên tháng <span class="text-red">*</span></span>
                     <input type="text" id="newMonthName" class="searchable"/>
                 </div>
-                <div class="form-group text-left" id="weekListEdit">/div>
-                    <div class="error editRank-err"></div>
-                </div>
-                <div class="modal-footer">
-                    <input type="submit" class="btn btn-danger" data-toggle="modal" id="editRankBtnModal"
-                           data-dismiss="modal" value="CHỈNH SỬA">
-                    <input type="button" class="btn btn-primary" data-dismiss="modal" value="ĐÓNG">
-                </div>
+                <div class="form-group text-left" id="weekListEdit"></div>
+                <div class="error editRank-err"></div>
+            </div>
+            <div class="modal-footer">
+                <input type="submit" class="btn btn-danger" data-toggle="modal" id="editRankBtnModal"
+                       data-dismiss="modal" value="CHỈNH SỬA">
+                <input type="button" class="btn btn-primary" data-dismiss="modal" value="ĐÓNG">
             </div>
         </div>
     </div>
 </div>
+
 
 <!--    Modal Message-->
 <div class="modal fade" tabindex="-1" role="dialog" id="messageModal">
